# ART-SM

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml
artsm/: append_db.py  artsm.py  build_db.py  coarse_grain.py  expansion.py  generate_posre.py  mapping.py
artsm/database/: db.py
artsm/hydrogens/: hydrogens.py
artsm/model/: features.py  label.py  mainconfs.py  models.py  training.py
artsm/optimization/: optimization.py
artsm/predefined_molecules/: classes.py  data.py  utils.py
artsm/resolution_transformation/: backmap.py
artsm/topology/: fragment.py  fragment_pair.py  molecule.py  simulation.py
artsm/utils/: angles.pyx  bond_angle_lists.py  clashing_atoms.py  cli.py  config.py  containers.py  fileparsing.py  other.py  plots.py  smiles.py
artsm/water/: data.py  model.py  utils.py
mapping_files/1-10-decandiol/: topol.yaml
mapping_files/1-hydroxypropan-2-one/: topol.yaml
mapping_files/S-2-bromo-2-chloropropan-1-ol/: topol.yaml
mapping_files/ala-ala-gly/: topol.yaml
mapping_files/butyl-pentadecanoate/: topol.yaml
mapping_files/heptan-1-ol/: topol.yaml
mapping_files/propan-1-ol/: topol.yaml
mapping_files/sds_cap/: topol.yaml
mapping_files/undecan-1-ol/: topol.yaml
tests/: fixtures.py  test_append_db.py  test_backmap.py  test_build_db.py  test_cg.py  test_cl_parsing.py  test_clashing.py  test_mapping.py  test_parse_args.py  test_posre.py
tests/data/config/: config1.yaml  config2.yaml  config3.yaml  config4.yaml  config5.yaml  config_global1.yaml  config_global2.yaml  config_heptanol.yaml
tests/data/mapping_files/: hep.yaml  prp.yaml  und.yaml  water.yaml
tests/data/snapshots/: .atomistic.xtc_offsets.npz  atomistic.xtc
tutorial/data/: config_global.yaml  config_heptanol.yaml  heptanol.xtc
