[project]
name = "artsm"
description = "A Python package to perform backmapping of coarse-grained molecules"
readme = "README.md"
requires-python = ">=3.9"
license = { text="MIT License" }
keywords = ["Backmapping", "Resolution Transformation", "Molecular Dynamics", "Simulation", "Coarse-grained"]

authors = [
    {name = "Christian Pfaendner", email = "christian.pfaendner@simtech.uni-stuttgart.de"},
    {name = "Viktoria Korn", email = "viktoria.korn@simtech.uni-stuttgart.de"},
    {name = "Pritom Gogoi", email = "pritom.gogoi101@gmail.com"},
    {name = "Benjamin Unger", email = "benjamin.unger@simtech.uni-stuttgart.de"},
    {name = "Kristyna Pluhackova", email = "kristyna.pluhackova@simtech.uni-stuttgart.de"}
]

maintainers = [
    {name = "Christian Pfaendner", email = "christian.pfaendner@simtech.uni-stuttgart.de"}
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
]
version = "1.0"
dependencies = ["numpy>=1.24.0",
                "scikit-learn>=1.3",
                "pandas>=1.3",
                "scipy>=1.10",
                "cython",
                "matplotlib",
                "mdanalysis>=2.5",
                "rdkit",
                "biotite",
                "hydride",
                "pyyaml",
                "pytest",
                ]

[build-system]
requires = ["setuptools", "wheel", "oldest-supported-numpy", "cython"]

[project.scripts]
artsm-backmap = "artsm.artsm:main"
artsm-build_db = "artsm.build_db:main"
artsm-coarse_grain = "artsm.coarse_grain:main"
artsm-append = "artsm.append_db:main"
artsm-mapping = "artsm.mapping:main"
artsm-posre = "artsm.generate_posre:main"

